Position logo in top right corner and reduce size; update header layout and CSS

--- a/chembiocompai-site/css/style.css
+++ b/chembiocompai-site/css/style.css
@@ -45,11 +45,18 @@
     margin: 0 auto;
 }
 .logo {
-    width: 48px;
-    height: 48px;
-    margin-left: 32px;
-    margin-right: 0;
+    width: 36px;
+    height: 36px;
     object-fit: contain;
+}
+.logo-top-right {
+    position: absolute;
+    top: 24px;
+    right: 32px;
+    z-index: 10;
+}
+.main-header {
+    position: relative;
 }
 .header-content {
     display: flex;
