--- a/chembiocompai-site/css/style.css
+++ b/chembiocompai-site/css/style.css
@@ -45,10 +45,10 @@
     margin: 0 auto;
 }
 .logo-top-right {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    z-index: 10;
+    position: fixed;
+    top: 12px;
+    right: 24px;
+    z-index: 100;
 }
 .main-header {
     position: relative;
