--- a/chembiocompai-site/css/style.css
+++ b/chembiocompai-site/css/style.css
@@ -6,13 +6,13 @@
     box-shadow: 0 2px 8px rgba(30,60,114,0.08);
     position: relative;
 }
-.header-content {
+ .header-content {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    max-width: 900px;
-    margin-left: 0;
-    margin-right: auto;
+    width: 100%;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 .header-left {
     text-align: left;
